--- a/Android application/app/src/main/res/layout/activity_mode_selection.xml
+++ b/Android application/app/src/main/res/layout/activity_mode_selection.xml
@@ -3,7 +3,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="controller.ModeActivity"
+    tools:context="controller.ModeSelectionActivity"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
