Add analog TV input

--- a/Android application/app/src/main/res/layout/activity_main_web.xml
+++ b/Android application/app/src/main/res/layout/activity_main_web.xml
@@ -9,10 +9,17 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
 
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </WebView>
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
