--- a/web-api/public/css/index.css
+++ b/web-api/public/css/index.css
@@ -29,3 +29,12 @@ h3 {
     border-radius: 10px;
     background: rgba(255, 255, 255, .7);
 }
+
+.btn.dpad-focusable:focus {
+    outline: none;
+    background-color:rgb(149, 165, 166);
+} 
+
+.btn.dpad-focusable.clickdown {
+    background-color: rgb(189, 195, 199);
+  }
