--- a/web-api/public/css/index.css
+++ b/web-api/public/css/index.css
@@ -8,6 +8,14 @@ h3 {
 
 .container {
     text-align: center;
+    padding: 5px;
+}
+
+.background{
+    background: rgba(250, 250, 200, .7);
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
 #header{
@@ -17,7 +25,17 @@ h3 {
     left: 30px;
     padding: 5px 30px;
     border-radius: 10px;
-    background: rgba(255, 255, 255, .7);
+    background: rgba(250, 250, 250, .7);
+}
+
+.invisible{
+    max-width: 30%;
+    position: fixed;
+    top:30px;
+    left: 30px;
+    padding: 5px 30px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, .7);
 }
 
 #channel{
@@ -27,7 +45,7 @@ h3 {
     right: 30px;
     padding: 5px 30px;
     border-radius: 10px;
-    background: rgba(255, 255, 255, .7);
+    background:rgba(250, 250, 250, .7);
 }
 
 a.btn:focus {
