--- a/web-api/public/css/index.css
+++ b/web-api/public/css/index.css
@@ -1,3 +1,14 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+div {
+    box-sizing: border-box;
+}
+
 h1 {
     text-align: center;
 }
@@ -12,10 +23,28 @@ h3 {
 }
 
 .background{
-    background: rgba(250, 250, 200, .7);
-    position: absolute;
+    background: black;
+    position: fixed;
+    top: 0px;
     height: 100%;
     width: 100%;
+    z-index: -1;
+}
+
+.video {
+    position: fixed;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
+.settings {
+    max-width: 600px;
+    margin: 30px auto;
+    padding: 5px 30px;
+    border-radius: 10px;
+    background: rgba(250, 250, 250, .7);
 }
 
 #header{
@@ -48,6 +77,21 @@ h3 {
     background:rgba(250, 250, 250, .7);
 }
 
+a.btn {
+    background-color:rgba(149, 165, 166, 0.1);
+    margin: 20px auto;
+    color: inherit;
+    font-style: none;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 6px;
+    border-radius: 3px;
+} 
+
 a.btn:focus {
     outline: none;
     background-color:rgb(149, 165, 166);
@@ -55,4 +99,8 @@ a.btn:focus {
 
 a.btn.clickdown {
     background-color: rgb(189, 195, 199);
-  }
+}
+a.disabled {
+    color: grey;
+    opacity: 20%;
+}
